chess-wasm/build_errors.txt

    Checking chess-wasm v0.1.0 (C:\Users\kenet\IdeaProjects\g1\chess-wasm)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `js_sys`
  --> src\lib.rs:40:27
   |
40 |                 let obj = js_sys::Object::new();
   |                           ^^^^^^ use of unresolved module or unlinked crate `js_sys`
   |
   = help: if you wanted to use a crate named `js_sys`, use `cargo add js_sys` to add it to your `Cargo.toml`
help: there is an enum variant `serde_json::Value::Object`; try using the variant's enum
   |
40 -                 let obj = js_sys::Object::new();
40 +                 let obj = serde_json::Value::new();
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `js_sys`
  --> src\lib.rs:41:17
   |
41 |                 js_sys::Reflect::set(&obj, &"row".into(), &JsValue::from(r as u32)).unwrap();
   |                 ^^^^^^ use of unresolved module or unlinked crate `js_sys`
   |
   = help: if you wanted to use a crate named `js_sys`, use `cargo add js_sys` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `js_sys`
  --> src\lib.rs:42:17
   |
42 |                 js_sys::Reflect::set(&obj, &"col".into(), &JsValue::from(c as u32)).unwrap();
   |                 ^^^^^^ use of unresolved module or unlinked crate `js_sys`
   |
   = help: if you wanted to use a crate named `js_sys`, use `cargo add js_sys` to add it to your `Cargo.toml`

warning: unused import: `Square`
 --> src\rules.rs:1:56
  |
1 | use crate::board::{BoardGrid, Color, Piece, PieceType, Square};
  |                                                        ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `chess-wasm` (lib) generated 1 warning
error: could not compile `chess-wasm` (lib) due to 3 previous errors; 1 warning emitted
